--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ jobs:
       name: "Build and deploy static binary: development"
       script:
         - wget https://github.com/brentp/hts-nim/releases/download/v0.2.8/hts_nim_static_builder
+        - chmod +x hts_nim_static_builder
         - ./hts_nim_static_builder -s ./src/nimpress.nim -n ./nimpress.nimble
         - mv nimpress nimpress-develop-x86_64
       deploy:
@@ -36,6 +37,7 @@ jobs:
       name: "Build and deploy static binary: release"
       script:
         - wget https://github.com/brentp/hts-nim/releases/download/v0.2.8/hts_nim_static_builder
+        - chmod +x hts_nim_static_builder
         - ./hts_nim_static_builder -s ./src/nimpress.nim -n ./nimpress.nimble
         - mv nimpress nimpress-v${TRAVIS_TAG}-x86_64
       deploy:
